--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -290,54 +290,50 @@
     </div>
     <!-- ----------------------------------------------------------------------- -->
 
-    <div class="container-5" align=center >
+    <div class="container-5" align=center>
         <table class="resources-table-5" align=center style="width:90%;">
             <tr>
                 <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">
                     Curated-Resources<br><br></p>
             </tr>
             <tr>
-                <td><p>
-                    <a href="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt" target="_blank">
-                        Programming References
-                    </a></p>
+                <td>
+                    <p>
+                        <a href="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt"
+                            target="_blank">
+                            Programming References
+                        </a>
+                    </p>
                 </td>
             </tr>
             <tr>
-                <td><p>
-                    <a href="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa" target="_blank">
-                        Curated Book List
-                    </a></p>
+                <td>
+                    <p>
+                        <a href="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa"
+                            target="_blank">
+                            Curated Book List
+                        </a>
+                    </p>
                 </td>
             </tr>
             <tr>
-                <td><p>
-                    <a href="page-depth-02\Resources-Dump.html">
-                        Saraf's Resources List
-                    </a></p>
+                <td>
+                    <p>
+                        <a href="page-depth-02\Resources-Dump.html">
+                            Saraf's Resources List
+                        </a>
+                    </p>
                 </td>
             </tr>
             <td style="background-color: rgba(240, 248, 255, 0);">
 
-                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">More Links</p>
-                
-    
-            <div align="center" style="color: #000000b2;">
-                <form>
-                    <label for="softwares" class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);"><br><small>More Links</small></label>
-                    <select name="cars" id="softwares">
-                        <option value=""></option>
-                        <option value=""><a href="https://github.com/Tichau/FileConverter/releases/tag/v2.1 "
-                                target="_blank">FileConverter</a></option>
-                        <option value=""><a href="https://handbrake.fr/downloads.php  " target="_blank">handbrake</a></option>
-                        <option value=""><a href="https://github.com/microsoft/PowerToys/releases/tag/v0.88.0"
-                                target="_blank">ms-PowerToys</a></option>
-                        <!-- <option value=""></option> -->
-                    </select>
-                </form>
-                <br>
-            </div></td>
+                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">
+                    <hr>
+                </p>
+
+            </td>
             </tr>
+
             <!-- ------------------------------------------------------------------------ -->
             <!-- ------------------------------------------------------------------------ -->
             <tr><!-- 3rd container with menu button -->
@@ -353,7 +349,12 @@
                     </p>
                 </td>
             </tr>
-
+            <tr><!-- 3rd container with menu button -->
+                <td class="menu-button" id="menuButton1" align="center" style="color: rgba(240, 248, 255, 0.85);">
+                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Softwares
+                    </p>
+                </td>
+            </tr>
             <tr><!-- 4th container with menu button -->
                 <td class="menu-button" id="menuButton4" align="center" style="color: rgba(240, 248, 255, 0.85);">
 
@@ -368,8 +369,47 @@
     <!-- -------------------------------------------------------------- -->
     <!-- -------------------------------------------------------------- -->
 
+    <!-- 1st popup menu -->
+    <div class="popup-menu" id="popupMenu1" style="max-width:70%;">
+        <div class="popup-close popup-close-btn"></div>
+        <!-- <div class="popup-menu-title">Content Creators</div> -->
+        <div class="popup-menu-categories">
+            <div class="popup-menu-category" align="center">
+                <!-- <div class="category-title">People I Follow</div> -->
+                <div class="link-item">
+                    <a href="https://github.com/Tichau/FileConverter/releases/tag/v2.1 "
+                        target="_blank">FileConverter</a>
+                </div>
+                <div class="link-item">
+                    <a href="https://handbrake.fr/downloads.php  " target="_blank">handbrake</a>
+                </div>
+                <div class="link-item">
+                    <a href="https://github.com/microsoft/PowerToys/releases/tag/v0.88.0"
+                        target="_blank">ms-PowerToys</a>
+                </div>
+                <div class="link-item">
+                    <a href="#" target="_blank">
+                        #
+                    </a>
+                </div>
+                <div class="link-item">
+                    <a href="#" target="_blank">
+                        #
+                    </a>
+                </div>
+                <div class="link-item">
+                    <a href="#" target="_blank">
+                        #
+                    </a>
+                </div>
+
+                <!-- More links here -->
+            </div>
+        </div>
+    </div>
+
     <!-- 2nd popup menu -->
-    <div class="popup-menu" id="popupMenu2"  style="max-width:70%;">
+    <div class="popup-menu" id="popupMenu2" style="max-width:70%;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Content Creators</div> -->
         <div class="popup-menu-categories">
@@ -457,8 +497,8 @@
         <div class="popup-menu-title">Backup 27.02.25<br><small>(Not Shared)</small></div>
         <div class="popup-menu-categories">
             <div class="popup-menu-category" align="center">
-<!--                 <div class="category-title">Coding Resources</div> -->
-<!--  <div class="link-item">
+                <!--                 <div class="category-title">Coding Resources</div> -->
+                <!--  <div class="link-item">
                     <a href="https://drive.google.com/drive/folders/1n8wBkN1nAhpW3Z0eMkU9OlMNaPByp88F?usp=drive_link"
                         target="_blank">
                         UITS Contests Archive
@@ -482,7 +522,7 @@
             document.addEventListener('DOMContentLoaded', function () {
                 // Button and popup pairs
                 const menuPairs = [
-                    // { button: 'menuButton1', popup: 'popupMenu1' },
+                    { button: 'menuButton1', popup: 'popupMenu1' },
                     { button: 'menuButton2', popup: 'popupMenu2' },
                     { button: 'menuButton3', popup: 'popupMenu3' },
                     { button: 'menuButton4', popup: 'popupMenu4' }
