--- a/page-depth-01/CSE-Files.html
+++ b/page-depth-01/CSE-Files.html
@@ -23,7 +23,7 @@
         <div class="navigation1"
             style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
         <script src="../apk-link.js"></script>
-        
+
         <a class="active-1" href="Tutorials.html">
             <small>Resources<br>Tutorials</small>
         </a>
@@ -57,79 +57,76 @@
         <p id=" bottom"><a style="color: #8c8c8c;" href="../index.html">Go back to index</a>
     </div> -->
     <div align=center>
-        <p align="center" style="width: 80%;color: #8c8c8c;"><b><small>Most of this files are in relevance with CSE-55
-                    batch</small></b><br><br><small style="font-size: x-small;">Take Note that Files may be
-                outdated or
-                not organized to the latest course list.<br>In that case, please email me
-                at <a href="mailto:b1tranger.01@gmail.com" target="_blank"
-                    style="color: #8c8c8c;"><b>b1tranger.01@gmail.com</b></a> and let me know of the specific
-                shortcomings of this page.
-                <br><br>Thanks in
-                advance!!
+        <p align="center" style="width: 80%;color: #8c8c8c;"><small style="font-size: x-small;">Most of this
+                files are
+                in relevance with CSE-55<br>( See footnotes )
             </small></p>
 
     </div>
-
     <!-- HIGHLIGHTS OF DRIVE -->
-
+    
     <div class="container-5" align=center>
+        <p align="center" style="color: rgba(240, 248, 255, 0.649);">Select your semester</p>
         <table class="resources-table-5" align=center style="width:90%;">
             <tr>
-                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Select your semester</p>
-            </tr>
-
-            <tr>
                 <td>
-                    <a href="page-depth-02/S01.html">
-                        1st Semester
-                    </a>
+                    <p> <a href="page-depth-02/S01.html">
+                            1st Semester
+                        </a></p>
                 </td>
                 <td>
-                    <a href="page-depth-02/S02.html">
-                        2nd Semester
-                    </a>
+                    <p> <a href="page-depth-02/S02.html">
+                            2nd Semester
+                        </a></p>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="page-depth-02/S03.html">
-                        3rd Semester
-                    </a>
+                    <p> <a href="page-depth-02/S03.html">
+                            3rd Semester
+                        </a></p>
+                </td>
 
                 <td>
-                    <a href="page-depth-02/S04.html">
-                        4th Semester
-                    </a>
+                    <p> <a href="page-depth-02/S04.html">
+                            4th Semester
+                        </a></p>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="page-depth-02/S05.html">
-                        5th Semester
-                    </a>
+                    <p> <a href="page-depth-02/S05.html">
+                            5th Semester
+                        </a></p>
                 </td>
 
 
                 <td>
-                    <a href="page-depth-02/S06.html">
-                        6th Semester
-                    </a>
+                    <p> <a href="page-depth-02/S06.html">
+                            6th Semester
+                        </a></p>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="page-depth-02/S07.html">
-                        7th Semester
-                    </a>
+                    <p> <a href="page-depth-02/S07.html">
+                            7th Semester
+                        </a></p>
                 </td>
 
                 <td>
-                    <a href="page-depth-02/S08.html">
-                        8th Semester
-                    </a>
+                    <p> <a href="page-depth-02/S08.html">
+                            8th Semester
+                        </a></p>
                 </td>
-            </tr>
+
             <tr>
+                <td colspan=2 style="background-color: rgba(240, 248, 255, 0);">
+                    <hr><br>
+                    <a href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL"
+                        target="_blank"><small><b>(
+                                Link to the Google Drive instead? )</b></small></a>
+                </td>
             </tr>
         </table>
     </div>
@@ -143,7 +140,19 @@
         <br>
     </div>
 
+    <div align=center>
+        <p align="center" style="width: 80%;color: #8c8c8c;"><b><small>Most of this files are in relevance with CSE-55
+                    batch</small></b><br><br><small style="font-size: x-small;">Take Note that Files may be
+                outdated or
+                not organized to the latest course list.<br>In that case, please email me
+                at <a href="mailto:b1tranger.01@gmail.com" target="_blank"
+                    style="color: #8c8c8c;"><b>b1tranger.01@gmail.com</b></a> and let me know of the specific
+                shortcomings of this page.
+                <br><br>Thanks in
+                advance!!
+            </small></p>
 
+    </div>
 
 
 
