--- a/page-depth-01/page-depth-02/S01.html
+++ b/page-depth-01/page-depth-02/S01.html
@@ -56,37 +56,39 @@
             </tr>
             <tr>
                 <td>
-                    <a href="https://drive.google.com/drive/folders/1a4dYGziykFyiGarcowV8rioWyIlAzvA1" target="_blank">
-                        S01 Notes + <b>Classroom Files</b>
-                    </a>
+                    <p> <a href="https://drive.google.com/drive/folders/1a4dYGziykFyiGarcowV8rioWyIlAzvA1"
+                            target="_blank">
+                            S01 Notes <br>+ <small><b>Classroom Files</b></small>
+                        </a></p>
+                </td>
+
+                <td>
+                    <p> <a href="https://drive.google.com/drive/folders/1aNeGzO__4pQiyohr7jADZYy7ODM3rC3t"
+                            target="_blank">
+                            S01 Books
+                        </a></p>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="https://drive.google.com/drive/folders/1aNeGzO__4pQiyohr7jADZYy7ODM3rC3t" target="_blank">
-                        S01 Books
-                    </a>
+                    <p> <a href="https://drive.google.com/drive/folders/14ecyN1EotbW1F-5Ulbk_9QbU3F0en8Cm"
+                            target="_blank">
+                            S01 Outlines
+                        </a></p>
+                </td>
+
+                <td>
+                    <p> <a href="https://drive.google.com/drive/folders/1bI8ewiui3Cv09A5DWc59RwHADIQB_mnn"
+                            target="_blank">
+                            S01 Questions
+                        </a></p>
                 </td>
             </tr>
             <tr>
-                <td>
-                    <a href="https://drive.google.com/drive/folders/14ecyN1EotbW1F-5Ulbk_9QbU3F0en8Cm" target="_blank">
-                        S01 Outlines
-                    </a>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <a href="https://drive.google.com/drive/folders/1bI8ewiui3Cv09A5DWc59RwHADIQB_mnn" target="_blank">
-                        S01 Questions
-                    </a>
-                </td>
-            </tr>
-            <tr>
-                <td>
+                <td colspan="2" >
                     <div class="container">
 
-                        <div class="img-container" style="height: 200px;">
+                        <div class="img-container" style="height: 200px;" >
                             <img src="S01 Course List.webp" alt="Codeforces Streams Page">
                             <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
                         </div>
