--- a/page-depth-01/page-depth-02/S04.html
+++ b/page-depth-01/page-depth-02/S04.html
@@ -14,25 +14,25 @@
   <!-- TOP BAR -->
 
   <div class="topnav-1">
-         <!-- APK LINK -->
-         <div class="navigation1"
-         style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
-     <script src="../../apk-link.js"></script>
+    <!-- APK LINK -->
+    <div class="navigation1"
+      style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
+    <script src="../../apk-link.js"></script>
 
     <a class="active-1" href="../Tutorials.html">
-        <small>Resources<br>Tutorials</small>
+      <small>Resources<br>Tutorials</small>
     </a>
     <a class="active-1" href="../References.html">
-        <small>Project<br>References</small>
+      <small>Project<br>References</small>
     </a>
     <a class="active-1" href="../Blog.html">
-        <small>CSE<br>Blog</small>
+      <small>CSE<br>Blog</small>
     </a>
     <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
-        target="_blank">
-        <small>UITS<br>G-Drive</small>
+      target="_blank">
+      <small>UITS<br>G-Drive</small>
     </a>
-</div>
+  </div>
 
 
   <!-- BOTTOM BAR "navbar" -->
@@ -55,39 +55,41 @@
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1cDUcQaB8cllhqZ4mb9vz4b331X3qZB1F?usp=drive_link" target="_blank">S04
-            Notes</a>
+          <p> <a href="https://drive.google.com/drive/folders/1cDUcQaB8cllhqZ4mb9vz4b331X3qZB1F?usp=drive_link"
+              target="_blank">S04
+              Notes</a></p>
         </td>
-      </tr>
-      <tr>
-        <td>
-          <a href="https://drive.google.com/drive/folders/1aC_MhhcbVZzyF2mEBFqpHCG_1uappYVJ?usp=drive_link" target="_blank">S04
-            Books</a>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <a href="https://drive.google.com/drive/folders/1ad-CJHUziHb0YOBll7VBEgC2bDa5BiLG?usp=drive_link" target="_blank">S04
-            Outlines</a>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <a href="https://drive.google.com/drive/folders/1bIuFeP0nhFK6XrLpNBpBF9hK7RqUKQcp?usp=drive_link" target="_blank">S04
-            Questions</a>
-        </td>
-      </tr>
-      <tr>
-        <td>
-            <div class="container">
 
-                <div class="img-container" style="height: 200px;">
-                    <img src="S04 Course List.webp" alt="Codeforces Streams Page">
-                    <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
-                </div>
-            </div>
+        <td>
+          <p> <a href="https://drive.google.com/drive/folders/1aC_MhhcbVZzyF2mEBFqpHCG_1uappYVJ?usp=drive_link"
+              target="_blank">S04
+              Books</a></p>
         </td>
-    </tr>
+      </tr>
+      <tr>
+        <td>
+          <p> <a href="https://drive.google.com/drive/folders/1ad-CJHUziHb0YOBll7VBEgC2bDa5BiLG?usp=drive_link"
+              target="_blank">S04
+              Outlines</a></p>
+        </td>
+
+        <td>
+          <p> <a href="https://drive.google.com/drive/folders/1bIuFeP0nhFK6XrLpNBpBF9hK7RqUKQcp?usp=drive_link"
+              target="_blank">S04
+              Questions</a></p>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="2">
+          <div class="container">
+
+            <div class="img-container" style="height: 200px;">
+              <img src="S04 Course List.webp" alt="Codeforces Streams Page">
+              <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
+            </div>
+          </div>
+        </td>
+      </tr>
     </table>
   </div>
 
