edited more buttons

--- a/page-depth-01/page-depth-02/S08.html
+++ b/page-depth-01/page-depth-02/S08.html
@@ -54,23 +54,23 @@
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1tk0VTCKn6lN7E9z6nwMchCBK3kf6XpPr?usp=drive_link"
+          <p> <a href="https://drive.google.com/drive/folders/1tk0VTCKn6lN7E9z6nwMchCBK3kf6XpPr?usp=drive_link"
             target="_blank">S08
-            Books</a>
+            Books</a></p>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1aKT3eqY5MncYlZzBQOMnDokaGhg2Ear0?usp=drive_link"
+          <p>  <a href="https://drive.google.com/drive/folders/1aKT3eqY5MncYlZzBQOMnDokaGhg2Ear0?usp=drive_link"
             target="_blank">S08
-            Outlines</a>
+            Outlines</a></p>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1aZEwrtBNlD1QnDkToy9E0I9XqWUulckF?usp=drive_link"
+          <p> <a href="https://drive.google.com/drive/folders/1aZEwrtBNlD1QnDkToy9E0I9XqWUulckF?usp=drive_link"
             target="_blank">S08
-            Questions</a>
+            Questions</a></p>
         </td>
       </tr>
       <tr>
