--- a/page-depth-01/page-depth-02/S06.html
+++ b/page-depth-01/page-depth-02/S06.html
@@ -56,20 +56,20 @@
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1aCb3nXXFO7aQOhzZqVBB2mATI3jl4e8C?usp=drive_link" target="_blank">S06
-            Books</a>
+          <p> <a href="https://drive.google.com/drive/folders/1aCb3nXXFO7aQOhzZqVBB2mATI3jl4e8C?usp=drive_link" target="_blank">S06
+            Books</a></p>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1aFiQrMjy-UoqNrMIQbFGZ4x1hX1H9Jg7?usp=drive_link" target="_blank">S06
-            Outlines</a>
+          <p> <a href="https://drive.google.com/drive/folders/1aFiQrMjy-UoqNrMIQbFGZ4x1hX1H9Jg7?usp=drive_link" target="_blank">S06
+            Outlines</a></p>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1abZooRb9i4kkLdPfmGYOSVEzVIEhV7TK?usp=drive_link" target="_blank">S06
-            Questions</a>
+          <p> <a href="https://drive.google.com/drive/folders/1abZooRb9i4kkLdPfmGYOSVEzVIEhV7TK?usp=drive_link" target="_blank">S06
+            Questions</a></p>
         </td>
       </tr>
       <tr>
