--- a/page-depth-01/CSE-Files.html
+++ b/page-depth-01/CSE-Files.html
@@ -64,9 +64,9 @@
 
     </div>
     <!-- HIGHLIGHTS OF DRIVE -->
-    
+
     <div class="container-5" align=center>
-        <p align="center" style="color: rgba(240, 248, 255, 0.649);">Select your semester</p>
+        <p align="center" style="color: rgba(240, 248, 255, 0.649);">Select your semester<br><br></p>
         <table class="resources-table-5" align=center style="width:90%;">
             <tr>
                 <td>
@@ -131,18 +131,12 @@
         </table>
     </div>
 
-    <div align=center>
 
-        <p align=center><a style="color:rgba(60, 60, 82, 0.733);"
-                href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL"
-                target="_blank"><small><b>(
-                        Link to the Google Drive instead? )</b></small></a></p>
-        <br>
-    </div>
 
     <div align=center>
-        <p align="center" style="width: 80%;color: #8c8c8c;"><b><small>Most of this files are in relevance with CSE-55
-                    batch</small></b><br><br><small style="font-size: x-small;">Take Note that Files may be
+        <p align="center" style="width: 80%;color: #8c8c8c;">
+            <!-- <b><small>Most of this files are in relevance with CSE-55 batch</small></b> -->
+                    <br><small style="font-size: x-small;">Take Note that Files may be
                 outdated or
                 not organized to the latest course list.<br>In that case, please email me
                 at <a href="mailto:b1tranger.01@gmail.com" target="_blank"
@@ -159,7 +153,7 @@
     <!-- <div align=center>
         <p id=" bottom"><a style="color: #8c8c8c;" href="../index.html">Go back to index</a>
     </div> -->
-    <br><br><br><br><br>
+    <br><br><br>
 
     <!-- HOME BUTTON -->
 
