--- a/page-depth-01/General-Info.html
+++ b/page-depth-01/General-Info.html
@@ -307,67 +307,80 @@
                 <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Find your info here</p>
             </tr>
             <tr>
-                    <td class="menu-button" id="menuButton1" align="center" style="color: rgba(240, 248, 255, 0.85);">
-                        <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Notice
-                        </p>
-                    </td>
-            </tr>
-            <tr>
-                <td><p>
-                    <a href="https://drive.google.com/drive/folders/1sl_cPO2lI276il35NZyIN7vr6Pc6HuSg" target="_blank">
-                        Departments info
-                    </a></p>
+                <td class="menu-button" id="menuButton1" align="center" style="color: rgba(240, 248, 255, 0.85);">
+                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Notice
+                    </p>
+                </td>
+
+                <td>
+                    <p>
+                        <a href="https://drive.google.com/drive/folders/1sl_cPO2lI276il35NZyIN7vr6Pc6HuSg"
+                            target="_blank">
+                            Departments info
+                        </a>
+                    </p>
                 </td>
             </tr>
             <tr>
-                <td><p>
-                    <a href="https://drive.google.com/drive/folders/1tCrwALNcqG9GZ_r3mVi3MFbu5mlLE2Xe?usp=drive_link"
-                        target="_blank">
-                        CSE Course Lists
-                    </a></p>
+                <td>
+                    <p>
+                        <a href="https://drive.google.com/drive/folders/1tCrwALNcqG9GZ_r3mVi3MFbu5mlLE2Xe?usp=drive_link"
+                            target="_blank">
+                            CSE Course Lists
+                        </a>
+                    </p>
+                </td>
+
+                <td>
+                    <p>
+                        <a href="https://drive.google.com/drive/folders/1E_FYLX-RMFZEqeZHn0Nms2OUSJmLXUQH"
+                            target="_blank">
+                            CSE Course Outlines
+                        </a>
+                    </p>
                 </td>
             </tr>
             <tr>
-                <td><p>
-                    <a href="https://drive.google.com/drive/folders/1E_FYLX-RMFZEqeZHn0Nms2OUSJmLXUQH" target="_blank">
-                        CSE Course Outlines
-                    </a></p>
+                <td>
+                    <p>
+                        <a href="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1"
+                            target="_blank">
+                            Class Routine format
+                        </a>
+                    </p>
+                </td>
+
+                <td>
+                    <p>
+                        <a href="https://drive.google.com/drive/folders/1i0UUsgy68Nypc2ylPsaB-Teljkf0NSUD?usp=drive_link"
+                            target="_blank">
+                            Questions
+                        </a>
+                    </p>
                 </td>
             </tr>
-            <td><p>
-                <a href="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1" target="_blank">
-                    Class Routine format
-                </a></p>
-            </td>
             <tr>
-                <td><p>
-                    <a href="https://drive.google.com/drive/folders/1i0UUsgy68Nypc2ylPsaB-Teljkf0NSUD?usp=drive_link"
-                        target="_blank">
-                        Questions
-                    </a></p>
+                <td>
+                    <p>
+                        <a href="https://drive.google.com/drive/folders/1BKYmB_nSw7y0zN7eKkDg6Sgudy66MSwU"
+                            target="_blank">
+                            Task Materials
+                        </a>
+                    </p>
                 </td>
-            </tr>
-            <tr>
-                <td><p>
-                    <a href="https://drive.google.com/drive/folders/1BKYmB_nSw7y0zN7eKkDg6Sgudy66MSwU" target="_blank">
-                        Task Materials
-                    </a></p>
-                </td>
+                
             </tr>
 
-            <tr>
-
-            </tr>
 
         </table>
     </div>
 
 
-<!-- -------------------------------------------------------------- -->
+    <!-- -------------------------------------------------------------- -->
 
-<!-- NOTICE POPUP -->
+    <!-- NOTICE POPUP -->
 
-<!-- First popup menu -->
+    <!-- First popup menu -->
     <div class="popup-menu" id="popupMenu1">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Content Creators</div> -->
@@ -447,7 +460,7 @@
             }
         });
     </script>
-<!-- -------------------------------------------------------------- -->
+    <!-- -------------------------------------------------------------- -->
 
     <div align=center>
 
