--- a/page-depth-01/Blog.html
+++ b/page-depth-01/Blog.html
@@ -334,9 +334,9 @@
             </tr>
             <tr>
                 <td>
-                    <a href="https://b1tranger-coding.blogspot.com/" target="_blank">
+                    <p><a href="https://b1tranger-coding.blogspot.com/" target="_blank">
                         <i>b1tranger</i>'s @blogspot
-                    </a>
+                    </a></p>
                 </td>
             </tr>
 
