--- a/page-depth-01/References.html
+++ b/page-depth-01/References.html
@@ -140,7 +140,7 @@
         <div class="navigation1"
             style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
         <script src="../apk-link.js"></script>
-        
+
         <a class="active-1" href="Tutorials.html">
             <small>Resources<br>Tutorials</small>
         </a>
@@ -222,7 +222,8 @@
 
                             <td style="text-align: center;" class="feature-list">
                                 <p style="margin-bottom: 5px; color:rgba(60, 60, 82, 0.733);">WAD projects of Batch 54
-                                    <br>(highlights)</p>
+                                    <br>(highlights)
+                                </p>
                                 <ul
                                     style="color:rgba(60, 60, 82, 0.733); list-style-position: inside; padding-left: 0;">
                                     <li><a style="color:rgba(60, 60, 82, 0.733);"
@@ -275,7 +276,10 @@
                         <td>UIU</td>
                         <td>-</td>
                         <td>
-                            <a href="https://nurulalamador.github.io/UIUQuestionBank/">UIU Question Bank</a>
+                            <div class="link-group">
+                                <a href="https://nurulalamador.github.io/UIUQuestionBank/">UIU Question Bank</a>
+                                
+                            </div>
                         </td>
                     </tr>
                     <tr>
@@ -283,9 +287,10 @@
                         <td>-</td>
                         <td>
                             <div class="link-group">
-                                <a href="https://routine.zohirrayhan.me/">DIU Routine Scrapper</a>
-                                <a href="https://play.google.com/store/apps/details?id=com.zohirrayhan.routinescrapper">PlayStore
-                                    App</a>
+                                <a href="https://diuqbank.com/">DIU Question Bank</a>
+                                <a href="https://routine.zohirrayhan.me/">DIU Routine Scrapper</a> 
+                                <small><a href="https://play.google.com/store/apps/details?id=com.zohirrayhan.routinescrapper">(PlayStore
+                                    App)</a></small>
                             </div>
                         </td>
                     </tr>
