renamed top bar

--- a/index.html
+++ b/index.html
@@ -37,9 +37,13 @@
     <a class="active-1" href="page-depth-01\Blog.html">
       <small>CSE<br>Blog</small>
     </a>
+    
+    <a class="active-1" href="https://ouits-schedule.netlify.app/">
+      <small>oUITS<br>Scheduler</small>
+  </a>
     <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
       target="_blank">
-      <small>UITS<br>G-Drive</small>
+      <small>oUITS<br>G-Drive</small>
     </a>
   </div>
 
