--- a/index.html
+++ b/index.html
@@ -55,8 +55,14 @@
 
   <!-- <div class="scroll-text">This is scrolling text.</div> -->
 
+<div class="navbar-5">
+        <font size="24"></font>
+        <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
+        </font>
 
-
+    </div>
+    <h1 align="center">oUITS-Resources</h1>
+    <p align="center"><small><i>CSE Resources for UITS Students</i></small></p>
 
   <!-- HIGHLIGHTS OF DRIVE -->
 
