--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           Resources for the <i>students</i> of UITS. I will be primarily working on this <a
             href="https://github.com/b1tranger/oUITS-Resources" target="_blank"
             style="color:rgba(4, 0, 128, 0.806);">GitHub Repo </a>( mirror deployment: <a
-            href="https://uits-res.netlify.app/" style="color:rgba(4, 0, 128, 0.806);">Netlify</a> and <a
+            href="https://ouits-res.netlify.app/" style="color:rgba(4, 0, 128, 0.806);">Netlify</a> and <a
             href="https://b1tranger.github.io/oUITS-Resources/" style="color:rgba(4, 0, 128, 0.806);"> github.io </a> ).
           Most of the materials here are publicly available and
           you are free to modify and reuse them
