added drop down menu for Quick Links
index.html top bar

--- a/index.html
+++ b/index.html
@@ -21,13 +21,11 @@
 
 <body style="background-color:rgba(218, 237, 255, 0.343);">
 
-  
+
   <!-- TOP BAR -->
 
   <div class="topnav-1">
-    <!-- APK LINK -->
-    <div class="navigation1" style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
-    <script src="apk-link.js"></script>
+
     <a class="active-1" href="page-depth-01/Tutorials.html">
       <small>Resources<br>Tutorials</small>
     </a>
@@ -37,14 +35,22 @@
     <a class="active-1" href="page-depth-01\Blog.html">
       <small>CSE<br>Blog</small>
     </a>
-    
-    <a class="active-1" href="https://ouits-schedule.netlify.app/">
-      <small>oUITS<br>Scheduler</small>
-  </a>
-    <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
-      target="_blank">
-      <small>oUITS<br>G-Drive</small>
-    </a>
+    <div class="dropdown">
+      <button class="dropbtn">Quick<br>Links</button>
+      <div class="dropdown-content">
+        <!-- APK LINK -->
+        <div class="navigation1" style="background-color: #0000009b;"></div>
+        <script src="apk-link.js"></script>
+        <a style="color: black;" class="active-1" href="https://ouits-schedule.netlify.app/" target="blank">
+          <small>oUITS<br>Scheduler</small>
+        </a>
+        <a style="color: black;" class="active-1"
+          href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing" target="_blank">
+          <small>oUITS<br>G-Drive</small>
+        </a>
+      </div>
+    </div>
+
   </div>
 
 
@@ -55,14 +61,14 @@
 
   <!-- <div class="scroll-text">This is scrolling text.</div> -->
 
-<div class="navbar-5">
-        <font size="24"></font>
-        <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
-        </font>
+  <div class="navbar-5">
+    <font size="24"></font>
+    <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
+    </font>
 
-    </div>
-    <h1 align="center">oUITS-Resources</h1>
-    <p align="center"><small><i>CSE Resources for UITS Students</i></small></p>
+  </div>
+  <h1 align="center">oUITS-Resources</h1>
+  <p align="center"><small><i>CSE Resources for UITS Students</i></small></p>
 
   <!-- HIGHLIGHTS OF DRIVE -->
 
@@ -72,25 +78,33 @@
         <p class="highlights-5" align="center" style="color: rgba(240, 248, 255, 0.649);">Browse Resources</p>
       </tr>
       <tr>
-        <td><p>
-          <a href="page-depth-01/CSE-Files.html">
-            CSE Files
-          </a></p>
+        <td>
+          <p>
+            <a href="page-depth-01/CSE-Files.html">
+              CSE Files
+            </a>
+          </p>
         </td>
-        <td><p>
-          <a href="page-depth-01/General-Info.html">
-            General Information
-          </a></p>
+        <td>
+          <p>
+            <a href="page-depth-01/General-Info.html">
+              General Information
+            </a>
+          </p>
         </td>
-        <td><p>
-          <a href="page-depth-01\CP-aux.html">
-            Programming
-        </td></p>
+        <td>
+          <p>
+            <a href="page-depth-01\CP-aux.html">
+              Programming
+        </td>
+        </p>
 
-        <td><p>
-          <a href="page-depth-01\Curated-Resources.html">
-            Resources Dump
-          </a></p>
+        <td>
+          <p>
+            <a href="page-depth-01\Curated-Resources.html">
+              Resources Dump
+            </a>
+          </p>
         </td>
       </tr>
     </table>
