--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
       <small>CSE<br>Blog</small>
     </a>
     <div class="dropdown">
-      <button class="dropbtn">Quick<br>Links</button>
+      <button class="dropbtn" onclick="toggleDropdown(this)">Quick<br>Links</button>
+      <!-- <button class="dropbtn">Quick<br>Links</button> -->
       <div class="dropdown-content">
         <!-- APK LINK -->
         <div class="navigation1" style="background-color: #0000009b;"></div>
@@ -53,7 +54,35 @@
 
   </div>
 
+  <script>
+    // Improved dropdown toggle function
+    function toggleDropdown(button) {
+      // Get the dropdown content element
+      var dropdownContent = button.nextElementSibling;
 
+      // Toggle the current dropdown
+      dropdownContent.classList.toggle("show");
+
+      // Close all other dropdowns
+      document.querySelectorAll(".dropdown-content.show").forEach(function (openDropdown) {
+        if (openDropdown !== dropdownContent) {
+          openDropdown.classList.remove("show");
+        }
+      });
+    }
+
+    // Add a global click event to close dropdowns when clicking outside
+    document.addEventListener("click", function (event) {
+      if (!event.target.matches('.dropbtn')) {
+        document.querySelectorAll(".dropdown-content.show").forEach(function (dropdown) {
+          dropdown.classList.remove("show");
+        });
+      } else {
+        // Stop event from reaching the document listener when clicking a button
+        event.stopPropagation();
+      }
+    });
+  </script>
 
   <!-- GO BOTTOM RELATIVE LINK -->
 
